Keeping projects to unique project_id only

--- a/index.qmd
+++ b/index.qmd
@@ -18,9 +18,10 @@ _Hosted by: Joe Enns; Dave Patterson; Sean Naman_
 - 🌊 [Development of geospatial tools for large-scale freshwater salmon habitat assessment by the Freshwater Spatial Ecology Program](pages/2425.qmd) | Josie Iacarella
 - 🌊 [Quantitative assessment of the impact of Smallmouth Bass suppression efforts in Cultus Lake and SMB emigration from Cultus Lake](pages/2443.qmd) | Daniel Doutaz
 - 🌊 [Improved understanding of cumulative impacts on salmon survival across freshwater life-stages; tools and approaches for mechanistic assessments](pages/2493.qmd) | David Patterson, Douglas Braun
-- 🧬 Untitled Project | University of British Columbia (Vancouver), Institute for the Oceans and Fisheries
-- 🧬 Untitled Project | Salish Sea Indigenous Guardians Association
-- 🧬 Untitled Project | Salmon Coast Field Station Society
+- 🧬 [Developing a cumulative effects modelling framework for the recovery of aquatic salmonid populations](pages/BCSRIF_2020_217.qmd) | University of British Columbia (Vancouver), Institute for the Oceans and Fisheries
+- 🧬 [First Nations led salmon habitat and population monitoring, research and cumulative effects assessment in the Lower Fraser River and Boundary Bay](pages/BCSRIF_2022_334.qmd) | Salish Sea Indigenous Guardians Association
+- 🧬 [Analysis of forestry effects on Pacific salmon in Musgamagw Dzawada’enuxw territory and across
+coastal BC.](pages/BCSRIF_2022_449.qmd) | Salmon Coast Field Station Society
 
 ### 🐟 salmon in a changing climate
 _Hosted by: Cory Lagasse; Di Wan; Amber Holdsworth; Patrick Thompson_
@@ -29,9 +30,9 @@ _Hosted by: Cory Lagasse; Di Wan; Amber Holdsworth; Patrick Thompson_
 - 🌊 [Changing coastal productivity: Using sediment cores, water properties and archived plankton data to identify changes at the bottom of the food web in BC’s coastal waters](pages/2406.qmd) | Sophia Johannessen
 - 🌊 [Adaptive genetic variation and climate change resilience in Canadian Pacific salmon](pages/2437.qmd) | Eric Rondeau, Tim Healy, Kyle Wellband
 - 🌊 [Climate Downscaling for salmon conservation in Marine Ecosystems](pages/2539.qmd) | Di Wan, James Christian
-- 🧬 Untitled Project | Pacific Climate Impacts Consortium
-- 🧬 Untitled Project | University of Northern British Columbia, Department of Geography, Earth and Environmental Sciences
-- 🧬 Untitled Project | Pacific Salmon Foundation
+- 🧬 [Development of High-resolution Climate Change Freshwater Hazard Data for BC](pages/BCSRIF_2022_384.qmd) | Pacific Climate Impacts Consortium
+- 🧬 [Evaluating climate change scenarios for the Quesnel Watershed to determine flood, fire and temperature risks posed to Upper Fraser salmon stocks.](pages/BCSRIF_2022_399.qmd) | University of Northern British Columbia, Department of Geography, Earth and Environmental Sciences
+- 🧬 [Supporting and connecting community-based monitoring for climate-resilient salmon ecosystems](pages/BCSRIF_2022_401.qmd) | Pacific Salmon Foundation
 
 ## 📅 December 03, 2025
 
@@ -44,9 +45,9 @@ _Hosted by: Isobel Pearsall; Nicholas Brown; Neil Dangerfield; Andrew Ross; Jess
 - 🌊 [Development and application of laser ablation-inductively coupled plasma-mass spectrometry (LA-ICP-MS) to determine saltwater entry size of juvenile salmonids and track habitat usage.](pages/2422.qmd) | Andrew Ross, Xiangjun Liao, Nicole LaForge
 - 🌊 [Barkley Sound and Clayoquot Sound acoustic monitoring of salmon and salmon prey](pages/2432.qmd) | Stephane Gauthier
 - 🌊 [Innovative Ecosystem Based Approaches to identify cumulative stressors: Salmon Fit-Chips and eDNA](pages/2447.qmd) | Kristi Miller-Saunders
-- 🧬 Untitled Project | Huu-ay-aht First Nations
-- 🧬 Untitled Project | Ka:’yu:’k’t’h’/Che:k’tles7et’h’ First Nation
-- 🧬 Untitled Project | Pacific Salmon Foundation
+- 🧬 [Research in support of Sarita Chinook as an Ecological Indicator and WCVI Chinook Salmon Rebuilding](pages/BCSRIF_2022_332.qmd) | Huu-ay-aht First Nations
+- 🧬 [Chinook Salmon Assessments and WCVI Chinook Salmon Rebuilding in the Kaouk and Artlish Watersheds](pages/BCSRIF_2022_337.qmd) | Ka:’yu:’k’t’h’/Che:k’tles7et’h’ First Nation
+- 🧬 [Identifying factors that influence early marine survival of WCVI Chinook salmon](pages/BCSRIF_2022_442.qmd) | Pacific Salmon Foundation
 
 ### 🐟 marine stressors
 _Hosted by: Isobel Pearsall; Nicholas Brown; Akash Sastri; Cameron Freshwater; Strahan Tucker_
@@ -56,8 +57,8 @@ _Hosted by: Isobel Pearsall; Nicholas Brown; Akash Sastri; Cameron Freshwater; S
 - 🌊 [Investigation of the impacts of singular and coinciding acute climate stressors on the nutritional quality of the pteropod Limacina helicina, a juvenile Pacific salmon dietary species](pages/2412.qmd) | Chris Pearce
 - 🌊 [Barkley Sound and Clayoquot Sound Krill Monitoring](pages/2413.qmd) | Akash Sastri, Kelly Young
 - 🌊 [Monitoring and predicting the exposure of Pacific salmon to harmful algal biotoxins](pages/2416.qmd) | Andrew Ross
-- 🌊 Untitled Project | 
-- 🧬 Untitled Project | University of British Columbia (Vancouver), Department of Earth, Ocean and Atmospheric Sciences
+- 🌊 [NA](pages/BCSRIF_2019_040-136D.qmd) | 
+- 🧬 [Determining the mechanisms of impacts of a changing climate on zooplankton in the Salish Sea using models and observations](pages/BCSRIF_2022_358.qmd) | University of British Columbia (Vancouver), Department of Earth, Ocean and Atmospheric Sciences
 
 ## 📅 December 09, 2025
 
@@ -71,8 +72,8 @@ _Hosted by: Cory Lagasse; Tim Healy; Eric Rondeau; Kyle Wellband_
 - 🌊 [Genomic consequences of stray hatchery introgression](pages/3119.qmd) | Eric Rondeau, Timothy Healy, Kyle Wellband
 - 🌊 [Genetic and epigenetic consequences of hatchery adaptation](pages/3120.qmd) | Eric Rondeau, Timothy Healy, Kyle Wellband
 - 🌊 [Impact of genetic divergence on outbreeding depression in Chinook Salmon](pages/3121.qmd) | Eric Rondeau, Timothy Healy, Kyle Wellband
-- 🧬 Untitled Project | Pacific Salmon Foundation
-- 🧬 Untitled Project | University of Victoria, Department of Biology
+- 🧬 [Science-based review of hatchery results in the DFO Pacific Region](pages/BCSRIF_2019_136.qmd) | Pacific Salmon Foundation
+- 🧬 [Causes and consequences of vateritic otoliths in hatchery-reared Coho salmon](pages/BCSRIF_2020_239.qmd) | University of Victoria, Department of Biology
 
 ### 🐟 salmon health
 _Hosted by: Joe Enns; Amy Long; Ian Forster; Christoph Deeg; Sydney Baxter; Alison Krimmer_
@@ -83,28 +84,28 @@ _Hosted by: Joe Enns; Amy Long; Ian Forster; Christoph Deeg; Sydney Baxter; Alis
 - 🌊 [Measurement of stress hormones in scales and its application for the identification of conditions causing chronic stress in Pacific Salmon.](pages/2421.qmd) | Stewart Johnson
 - 🌊 [SHERLOCK assay for rapid genotyping applications](pages/2434.qmd) | Eric Rondeau, Tim Healy, Kyle Wellband
 - 🌊 [Developing a proactive, modernized, holistic approach to ensure optimal health and condition of Hatchery Production](pages/2448.qmd) | Kristi Miller-Saunders
-- 🧬 Untitled Project | BC Centre for Aquatic Health Sciences Society
+- 🧬 [The application of nanopore technology for the rapid detection and characterization of pathogenic organisms in enhancement hatcheries](pages/BCSRIF_2020_311.qmd) | BC Centre for Aquatic Health Sciences Society
 
 ## 📅 December 10, 2025
 
 ### 🐟 data and modelling to support decision making
 _Hosted by: Ann-Marie Huang; Carrie Holt;_
 
-- 🌊 Untitled Project | 
+- 🌊 [NA](pages/101.qmd) | 
 - 🌊 [Improved decision making for salmon by understanding the threats of freshwater Aquatic Invasive Species both now and in the future](pages/2410.qmd) | Thomas Therriault, Cher LaCoste
 - 🌊 [A decision-support tool that considers harvest, hatchery, and habitat management levers to support implementation of the Fisheries Act for Pacific salmon](pages/2449.qmd) | Carrie Holt, Brendan Connors, Catarina Wor
 - 🌊 [Fishery & Assessment Data Section - Data Stewardship Unit](pages/2546.qmd) | Shelee Hamilton
-- 🧬 Untitled Project | Pacific Salmon Foundation
-- 🧬 Untitled Project | Canadian Wildlife Federation
+- 🧬 [Supporting the Ongoing Use and Development of the Pacific Salmon Explorer](pages/BCSRIF_2020_279.qmd) | Pacific Salmon Foundation
+- 🧬 [Restoring freshwater connectivity for Pacific salmon](pages/BCSRIF_2022_415.qmd) | Canadian Wildlife Federation
 
 ### 🐟 fisheries monitoring and harvest methods
 _Hosted by: Ann-Marie Huang; Cory Lagasse; Erin Rechisky_
 
-- 🌊 Untitled Project | 
+- 🌊 [NA](pages/102.qmd) | 
 - 🌊 [Enhanced salmon bycatch monitoring and sampling in the Pacific region groundfish trawl fishery](pages/2394.qmd) | Cory Lagasse
-- 🧬 Untitled Project | Pacific Salmon Foundation
-- 🧬 Untitled Project | University of British Columbia (Vancouver), Department of Forest and Conservation Sciences
-- 🧬 Untitled Project | Central Coast Indigenous Resource Alliance Society
-- 🧬 Untitled Project | A-Tlegay Fisheries Society
-- 🧬 Untitled Project | Sport Fishing Institute of BC
+- 🧬 [Empowering Indigenous community fisheries with deep learning - computer vision for adaptive management of terminal salmon fisheries](pages/BCSRIF_2019_045.qmd) | Pacific Salmon Foundation
+- 🧬 [Enhancing Sustainability of capture & release marine recreational Pacific salmon fisheries using new tools/technology](pages/BCSRIF_2019_058.qmd) | University of British Columbia (Vancouver), Department of Forest and Conservation Sciences
+- 🧬 [First Nations-led catch monitoring to inform sustainable mixed-stock fisheries management on the Central Coast](pages/BCSRIF_2020_292.qmd) | Central Coast Indigenous Resource Alliance Society
+- 🧬 [Selective Fishing Using a Salmon Trap in the Campbell River Estuary](pages/BCSRIF_2022_347.qmd) | A-Tlegay Fisheries Society
+- 🧬 [FRIM – Short term mortality holding and respirometry studies](pages/BCSRIF_2022_454.qmd) | Sport Fishing Institute of BC
 
