Keeping projects to unique project_id only

--- a/pages/BCSRIF_2022_358.qmd
+++ b/pages/BCSRIF_2022_358.qmd
@@ -12,7 +12,7 @@ toc: true
 **PSSI Pillar:**   
 **Session(s):** Marine Stressors  
 **Presentation Date(s):** December 04, 2025  
-**Speakers:**   
+**Speakers:** (blank)  
 **Overview:**  
 University of British Columbia (UBC), in partnership with Ocean Sciences (DFO) and University of Washington, will use a combined approach to examine the impacts of climate change on the food available to out-migrating juvenile salmon and resident adult species  in the Salish Sea. Using both computer models and observational data, the team will focus on zooplankton responses to stressors such as ocean warming and increased atmospheric CO2. This information will be critical to identifying potential benefits or threats posed to wild Pacific Salmon populations in response to climate change.    
 
