--- a/pages/2437.qmd
+++ b/pages/2437.qmd
@@ -12,7 +12,7 @@ toc: true
 **PSSI Pillar:** 1-Conservation and stewardship  
 **Session(s):** Salmon In A Changing Climate  
 **Presentation Date(s):** December 02, 2025  
-**Speakers:** Eric Rondeau, Tim Healy, Kyle Wellband  
+**Speakers:** ""  
 **Overview:**  
 Pacific salmon genetic markers are regularly used to manage fisheries and hatcheries. While these genetic analysis efforts provide important stock management information, they could also be used to assess diversity of salmon species relative to habitat changes. This salmon genetic adaptation study gathers Chinook and sockeye DNA samples and compares genomes to environmental conditions and climate projections.   
 
