--- a/pages/_blank_.qmd
+++ b/pages/_blank_.qmd
@@ -10,9 +10,9 @@ toc: true
 **Division:**   
 **Section:**   
 **PSSI Pillar:**   
-**Session(s):** Fisheries Monitoring And Harvest Methods  
+**Session(s):** Data And Modelling To Support Decision Making; Fisheries Monitoring And Harvest Methods  
 **Presentation Date(s):** December 11, 2025  
-**Speakers:** Phil Lemp, Erin Rechisky  
+**Speakers:** Ann-Marie Huang; Diana Dobson; Phil Lemp, Erin Rechisky  
 **Overview:**  
    
 
