Keeping projects to unique project_id only

--- a/index.qmd
+++ b/index.qmd
@@ -6,7 +6,8 @@ format: html
 toc: false
 ---
 
-## 🗓️ Upcoming Talks by Date
+
+👉 [View the session calendar](calendar.qmd)
 
 ## 📅 December 02, 2025
 
