--- a/index.qmd
+++ b/index.qmd
@@ -28,17 +28,17 @@ toc: false
 <tr>
 <td></td>
 <td><div class='calendar-cell'><strong>1</strong></div></td>
-<td><div class='calendar-cell'><strong>2</strong><br><div class='calendar-button' style='background-color:#FFC107'>Freshwater Stressors</div><div class='calendar-button' style='background-color:#007BFF'>Salmon In A Changing Climate</div></div></td>
+<td><div class='calendar-cell'><strong>2</strong><br><div class='calendar-button' style='background-color:#20C997'>Freshwater Stressors</div><div class='calendar-button' style='background-color:#28A745'>Salmon In A Changing Climate</div></div></td>
 <td><div class='calendar-cell'><strong>3</strong></div></td>
-<td><div class='calendar-cell'><strong>4</strong><br><div class='calendar-button' style='background-color:#20C997'>Follow The Fish</div><div class='calendar-button' style='background-color:#DC3545'>Marine Stressors</div></div></td>
+<td><div class='calendar-cell'><strong>4</strong><br><div class='calendar-button' style='background-color:#28A745'>Follow The Fish</div><div class='calendar-button' style='background-color:#FD7E14'>Marine Stressors</div></div></td>
 <td><div class='calendar-cell'><strong>5</strong></div></td>
 <td><div class='calendar-cell'><strong>6</strong></div></td>
 <tr>
 <td><div class='calendar-cell'><strong>7</strong></div></td>
 <td><div class='calendar-cell'><strong>8</strong></div></td>
-<td><div class='calendar-cell'><strong>9</strong><br><div class='calendar-button' style='background-color:#007BFF'>Salmon Health</div><div class='calendar-button' style='background-color:#007BFF'>Hatcheries</div></div></td>
+<td><div class='calendar-cell'><strong>9</strong><br><div class='calendar-button' style='background-color:#DC3545'>Salmon Health</div><div class='calendar-button' style='background-color:#28A745'>Hatcheries</div></div></td>
 <td><div class='calendar-cell'><strong>10</strong></div></td>
-<td><div class='calendar-cell'><strong>11</strong><br><div class='calendar-button' style='background-color:#DC3545'>Fisheries Monitoring And Harvest Methods</div><div class='calendar-button' style='background-color:#6F42C1'>Data And Modelling To Support Decision Making</div></div></td>
+<td><div class='calendar-cell'><strong>11</strong><br><div class='calendar-button' style='background-color:#DC3545'>Fisheries Monitoring And Harvest Methods</div><div class='calendar-button' style='background-color:#FFC107'>Data And Modelling To Support Decision Making</div></div></td>
 <td><div class='calendar-cell'><strong>12</strong></div></td>
 <td><div class='calendar-cell'><strong>13</strong></div></td>
 <tr>
@@ -66,7 +66,6 @@ toc: false
 <td></td>
 <td></td>
 </table>
-:::
 
 ## 📅 December 02, 2025
 
